ci: workflow for publishing snapshot packages

--- a/apps/docs/docs/getting-started/setup.mdx
+++ b/apps/docs/docs/getting-started/setup.mdx
@@ -18,17 +18,17 @@ First add React DOT, along with required packages as dependencies to your React 
 <Tabs>
   <TabItem value="npm" label="npm" default>
     ```sh
-    npm add @reactive-dot/react polkadot-api
+    npm add @reactive-dot/react@snapshot polkadot-api
     ```
   </TabItem>
   <TabItem value="yarn" label="yarn">
     ```sh
-    yarn add @reactive-dot/react polkadot-api
+    yarn add @reactive-dot/react@snapshot polkadot-api
     ```
   </TabItem>
     <TabItem value="pnpm" label="pnpm">
     ```sh
-    pnpm add @reactive-dot/react polkadot-api
+    pnpm add @reactive-dot/react@snapshot polkadot-api
     ```
   </TabItem>
 </Tabs>
