--- a/apps/docs/docs/getting-started/setup.mdx
+++ b/apps/docs/docs/getting-started/setup.mdx
@@ -11,7 +11,7 @@ This walks you through the process of creating a simple Reactive DOT application
 
 ## Installation
 
-First add React DOT, along with required packages as dependencies to your React project.
+First add Reactive DOT, along with required packages as dependencies to your React project.
 
 {/* prettier-ignore-start */}
 
