chore: simplify example smoldot worker

--- a/apps/docs/docs/getting-started/setup.mdx
+++ b/apps/docs/docs/getting-started/setup.mdx
@@ -72,14 +72,17 @@ import { chainSpec } from "polkadot-api/chains/polkadot";
 import { getSmProvider } from "polkadot-api/sm-provider";
 import { startFromWorker } from "polkadot-api/smoldot/from-worker";
 
-const smoldot = startFromWorker(new SmWorker());
-const chain = smoldot.addChain({ chainSpec });
+const smoldot = startFromWorker(
+  new Worker(new URL("polkadot-api/smoldot/worker", import.meta.url), {
+    type: "module",
+  }),
+);
 
 const config: Config = {
   chains: {
     polkadot: {
       descriptor: polkadot,
-      provider: getSmProvider(chain),
+      provider: getSmProvider(smoldot.addChain({ chainSpec })),
     },
   },
   wallets: [new InjectedConnector()],
