feat: function & hook for resetting failed queries

--- a/apps/docs/docs/getting-started/setup.mdx
+++ b/apps/docs/docs/getting-started/setup.mdx
@@ -101,8 +101,8 @@ import { Suspense } from "react";
 const App = () => (
   <ReDotProvider config={config}>
     <ReDotChainProvider chainId="polkadot">
-      {/** Make sure there is at least one Suspense boundary wrapping the app */}
-      <Suspense>{/** ... */}</Suspense>
+      {/* Make sure there is at least one Suspense boundary wrapping the app */}
+      <Suspense>{/* ... */}</Suspense>
     </ReDotChainProvider>
   </ReDotProvider>
 );
