fix(docs): incorrect variable name

--- a/apps/docs/docs/getting-started/setup.mdx
+++ b/apps/docs/docs/getting-started/setup.mdx
@@ -81,7 +81,7 @@ const smoldot = startFromWorker(
 const config: Config = {
   chains: {
     polkadot: {
-      descriptor: polkadot,
+      descriptor: dot,
       provider: getSmProvider(smoldot.addChain({ chainSpec })),
     },
   },
