docs: link to Polkadot-API for documentation on codegen

--- a/apps/docs/docs/getting-started/setup.mdx
+++ b/apps/docs/docs/getting-started/setup.mdx
@@ -37,7 +37,7 @@ First add Reactive DOT, along with required packages as dependencies to your Rea
 
 ## Download & sync metadata
 
-Next, download the latest metadata from the chain you want to connect to and generate the types
+Next, download the latest metadata from the chain you want to connect to and generate the types.
 
 ```sh
 # `papi add` is the command
@@ -47,6 +47,8 @@ npx papi add dot -n polkadot
 # Wait for the latest metadata to download, then generate the types:
 npx papi
 ```
+
+For more information on metadata syncing and type generation, please refer to this [documentation](https://polkadot-api.github.io/polkadot-api-docs/codegen) provided by [Polkadot-API](https://polkadot-api.github.io/polkadot-api-docs).
 
 ## Add type information
 
