fix(docs): typo

--- a/apps/docs/docs/getting-started/setup.mdx
+++ b/apps/docs/docs/getting-started/setup.mdx
@@ -52,7 +52,7 @@ For more information on metadata syncing and type generation, please refer to th
 
 ## Add type information
 
-The records of `ChainId` -> `Descriptor` here will be used to provided you with the right type definitions when using hooks.
+The records of `ChainId` -> `Descriptor` here will be used to provide you with the right type definitions when using hooks.
 
 ```ts title="redot.d.ts"
 import type { dot } from "@polkadot-api/descriptors";
