refactor: remove `types.js` sub export

--- a/apps/docs/docs/getting-started/connect-wallets.mdx
+++ b/apps/docs/docs/getting-started/connect-wallets.mdx
@@ -40,7 +40,7 @@ Additional dependencies are required if you use any of be bellow wallet type.
 ## Add wallets to the config
 
 ```ts title="config.ts"
-import type { Config } from "@reactive-dot/core/types.js";
+import type { Config } from "@reactive-dot/core";
 import {
   InjectedAggregator,
   WalletConnect,
