refactor: rename `useQuery` to `useLazyLoadQuery`
- To explicitly convey that the hook will load the query after render and can cause waterfall
- In preparation for React 19 with different possible preloading strategies

--- a/apps/docs/docs/getting-started/setup.mdx
+++ b/apps/docs/docs/getting-started/setup.mdx
@@ -119,11 +119,11 @@ export default App;
 
 ```tsx title="MyComponent.tsx"
 import { config } from "./config";
-import { useQuery, useAccounts } from "@reactive-dot/react";
+import { useAccounts, useLazyLoadQuery } from "@reactive-dot/react";
 
 const MyComponent = () => {
   const accounts = useAccounts();
-  const [timestamp, totalIssuance] = useQuery((builder) =>
+  const [timestamp, totalIssuance] = useLazyLoadQuery((builder) =>
     builder
       .readStorage("Timestamp", "Now", [])
       .readStorage("Balances", "TotalIssuance", []),
