--- a/apps/docs/docs/getting-started/setup.mdx
+++ b/apps/docs/docs/getting-started/setup.mdx
@@ -142,15 +142,17 @@ import config from "./config";
 import { ReDotChainProvider, ReDotProvider } from "@reactive-dot/react";
 import { Suspense } from "react";
 
-const App = () => (
-  <ReDotProvider config={config}>
-    {/* `chainId` match the ID previously specified via `polkadot: typeof dot` */}
-    <ReDotChainProvider chainId="polkadot">
-      {/* Make sure there is at least one Suspense boundary wrapping the app */}
-      <Suspense>{/* ... */}</Suspense>
-    </ReDotChainProvider>
-  </ReDotProvider>
-);
+function App() {
+  return (
+    <ReDotProvider config={config}>
+      {/* `chainId` match the ID previously specified via `polkadot: typeof dot` */}
+      <ReDotChainProvider chainId="polkadot">
+        {/* Make sure there is at least one Suspense boundary wrapping the app */}
+        <Suspense>{/* ... */}</Suspense>
+      </ReDotChainProvider>
+    </ReDotProvider>
+  );
+}
 
 export default App;
 ```
@@ -161,7 +163,7 @@ export default App;
 import { config } from "./config";
 import { useAccounts, useLazyLoadQuery } from "@reactive-dot/react";
 
-const MyComponent = () => {
+function MyComponent() {
   const accounts = useAccounts();
   const [timestamp, totalIssuance] = useLazyLoadQuery((builder) =>
     builder
@@ -187,7 +189,7 @@ const MyComponent = () => {
       </section>
     </div>
   );
-};
+}
 
 export default MyComponent;
 ```
