refactor: `Chains` type extension
Extends type declarations from config instead of the other way around.

--- a/apps/docs/docs/getting-started/connect-wallets.mdx
+++ b/apps/docs/docs/getting-started/connect-wallets.mdx
@@ -46,7 +46,7 @@ import {
   WalletConnect,
 } from "@reactive-dot/core/wallets.js";
 
-const config: Config = {
+const config = {
   // ...
   wallets: [
     new InjectedWalletAggregator(),
@@ -67,7 +67,7 @@ const config: Config = {
       ],
     }),
   ],
-};
+} as const satisfies Config;
 
 export default config;
 ```
