docs: add notices

--- a/apps/docs/docs/getting-started/setup.mdx
+++ b/apps/docs/docs/getting-started/setup.mdx
@@ -2,12 +2,17 @@
 sidebar_position: 1
 ---
 
+import Admonition from "@theme/Admonition";
 import TabItem from "@theme/TabItem";
 import Tabs from "@theme/Tabs";
 
 # Setup
 
 This walks you through the process of creating a simple Reactive DOT application.
+
+<Admonition type="warning" icon="🚧" title="Work-in-progress">
+  This project is under active development, and the API may change at any time.
+</Admonition>
 
 ## Installation
 
@@ -48,7 +53,11 @@ npx papi add dot -n polkadot
 npx papi
 ```
 
+:::info
+
 For more information on metadata syncing and type generation, please refer to this [documentation](https://polkadot-api.github.io/polkadot-api-docs/codegen) provided by [Polkadot-API](https://polkadot-api.github.io/polkadot-api-docs).
+
+:::
 
 ## Create config
 
