docs: refer `dot-connect` (#4)

--- a/apps/docs/docs/getting-started/connect-wallets.mdx
+++ b/apps/docs/docs/getting-started/connect-wallets.mdx
@@ -9,6 +9,10 @@ import Tabs from "@theme/Tabs";
 
 Wallets & accounts connection can by managed via [`useWallets`](/api/react/function/useWallets), [`useConnectedWallets`](/api/react/function/useConnectedWallets) & [`useAccounts`](/api/react/function/useAccounts) hooks.
 
+:::tip
+If you prefer not having to build a wallet connection UI from scratch, checkout [DOT Connect](https://dotconnect.dev/) for a quick and easy way to add a great wallet experience to your DApps.
+:::
+
 ## Install optional dependencies
 
 Additional dependencies are required if you use any of be bellow wallet type.
