docs: remove snapshot preference from installation instruction

--- a/apps/docs/docs/getting-started/setup.mdx
+++ b/apps/docs/docs/getting-started/setup.mdx
@@ -23,17 +23,17 @@ First add Reactive DOT, along with required packages as dependencies to your Rea
 <Tabs>
   <TabItem value="npm" label="npm" default>
     ```sh
-    npm add @reactive-dot/react@snapshot polkadot-api
+    npm add @reactive-dot/react polkadot-api
     ```
   </TabItem>
   <TabItem value="yarn" label="yarn">
     ```sh
-    yarn add @reactive-dot/react@snapshot polkadot-api
+    yarn add @reactive-dot/react polkadot-api
     ```
   </TabItem>
     <TabItem value="pnpm" label="pnpm">
     ```sh
-    pnpm add @reactive-dot/react@snapshot polkadot-api
+    pnpm add @reactive-dot/react polkadot-api
     ```
   </TabItem>
 </Tabs>
