--- a/apps/docs/docs/getting-started/connect-wallets.mdx
+++ b/apps/docs/docs/getting-started/connect-wallets.mdx
@@ -50,7 +50,7 @@ import {
   WalletConnect,
 } from "@reactive-dot/core/wallets.js";
 
-const config = {
+export const config = {
   // ...
   wallets: [
     new InjectedWalletAggregator(),
@@ -72,20 +72,18 @@ const config = {
     }),
   ],
 } as const satisfies Config;
-
-export default config;
 ```
 
 ## Connect to wallets
 
-```tsx title="Wallets.tsx"
+```tsx title="wallets.tsx"
 import {
   useConnectedWallets,
   useWallets,
   useConnectWallet,
 } from "@reactive-dot/react";
 
-export default function Wallets() {
+export function Wallets() {
   const wallets = useWallets();
   const connectedWallets = useConnectedWallets();
 
@@ -123,10 +121,10 @@ export default function Wallets() {
 
 ## Display available accounts
 
-```tsx title="Accounts.tsx"
+```tsx title="accounts.tsx"
 import { useAccounts } from "@reactive-dot/react";
 
-export default function Accounts() {
+export function Accounts() {
   const accounts = useAccounts();
 
   return (
