--- a/apps/docs/docs/getting-started/setup.mdx
+++ b/apps/docs/docs/getting-started/setup.mdx
@@ -83,7 +83,7 @@ const smoldot = startFromWorker(
   }),
 );
 
-const config = {
+export const config = {
   chains: {
     // "polkadot" here can be any unique string value
     polkadot: {
@@ -93,8 +93,6 @@ const config = {
   },
   wallets: [new InjectedWalletAggregator()],
 } as const satisfies Config;
-
-export default config;
 ```
 
 {/* prettier-ignore-start */}
@@ -110,7 +108,7 @@ import { WebSocketProvider } from "@polkadot-api/ws-provider/web";
 import type { Config } from "@reactive-dot/core";
 import { InjectedWalletAggregator } from "@reactive-dot/core/wallets.js";
 
-const config = {
+export const config = {
   chains: {
     polkadot: {
       descriptor: dot,
@@ -119,8 +117,6 @@ const config = {
   },
   wallets: [new InjectedWalletAggregator()],
 } as const satisfies Config;
-
-export default config;
 ```
 
 {/* prettier-ignore-start */}
@@ -145,12 +141,12 @@ declare module "@reactive-dot/core" {
 
 ## Wrap app in context providers
 
-```tsx title="App.tsx"
-import config from "./config";
+```tsx title="app.tsx"
+import { config } from "./config";
 import { ReDotChainProvider, ReDotProvider } from "@reactive-dot/react";
 import { Suspense } from "react";
 
-export default function App() {
+export function App() {
   return (
     <ReDotProvider config={config}>
       {/* `chainId` match the ID previously specified via `polkadot: typeof dot` */}
@@ -165,11 +161,11 @@ export default function App() {
 
 ## Use Reactive DOT
 
-```tsx title="MyComponent.tsx"
+```tsx title="my-component.tsx"
 import { config } from "./config";
 import { useAccounts, useLazyLoadQuery } from "@reactive-dot/react";
 
-export default function MyComponent() {
+export function MyComponent() {
   const accounts = useAccounts();
   const [timestamp, totalIssuance] = useLazyLoadQuery((builder) =>
     builder
