fix(docs,example): incorrect config import

--- a/apps/docs/docs/getting-started/setup.mdx
+++ b/apps/docs/docs/getting-started/setup.mdx
@@ -131,7 +131,7 @@ export const config = {
 The type declarations extension here will be used to provide you with the right type definitions when using hooks.
 
 ```ts title="redot.d.ts"
-import type config from "./config";
+import type { config } from "./config";
 import type { InferChains } from "@reactive-dot/core";
 
 declare module "@reactive-dot/core" {
