--- a/apps/docs/docs/getting-started/setup.mdx
+++ b/apps/docs/docs/getting-started/setup.mdx
@@ -55,7 +55,7 @@ npx papi
 
 :::info
 
-For more information on metadata syncing and type generation, please refer to this [documentation](https://polkadot-api.github.io/polkadot-api-docs/codegen) provided by [Polkadot-API](https://polkadot-api.github.io/polkadot-api-docs).
+For more information on metadata syncing and type generation, please refer to this [documentation](https://papi.how/codegen) provided by [Polkadot-API](https://papi.how/).
 
 :::
 
