refactor!: simplify chain type registration

--- a/apps/docs/docs/getting-started/setup.mdx
+++ b/apps/docs/docs/getting-started/setup.mdx
@@ -131,11 +131,12 @@ export const config = {
 The type declarations extension here will be used to provide you with the right type definitions when using hooks.
 
 ```ts title="reactive-dot.d.ts"
-import type { config } from "./config";
-import type { InferChains } from "@reactive-dot/core";
+import type { config } from "./config.js";
 
 declare module "@reactive-dot/core" {
-  export interface Chains extends InferChains<typeof config> {}
+  export interface Register {
+    config: typeof config;
+  }
 }
 ```
 
