--- a/apps/docs/docs/getting-started/connect-wallets.mdx
+++ b/apps/docs/docs/getting-started/connect-wallets.mdx
@@ -69,14 +69,14 @@ Additional dependencies are required if you use any of be bellow wallet type.
 
 ```ts title="config.ts"
 import { defineConfig } from "@reactive-dot/core";
-import { InjectedWalletAggregator } from "@reactive-dot/core/wallets.js";
+import { InjectedWalletProvider } from "@reactive-dot/core/wallets.js";
 import { LedgerWallet } from "@reactive-dot/wallet-ledger";
 import { WalletConnect } from "@reactive-dot/wallet-walletconnect";
 
 export const config = defineConfig({
   // ...
   wallets: [
-    new InjectedWalletAggregator(),
+    new InjectedWalletProvider(),
     new LedgerWalet(),
     new WalletConnect({
       projectId: "WALLET_CONNECT_PROJECT_ID",
