--- a/apps/docs/docs/getting-started/setup.mdx
+++ b/apps/docs/docs/getting-started/setup.mdx
@@ -72,7 +72,7 @@ For more information on metadata syncing and type generation, please refer to th
 // `dot` is the name we gave to `npx papi add`
 import { dot } from "@polkadot-api/descriptors";
 import { defineConfig } from "@reactive-dot/core";
-import { InjectedWalletAggregator } from "@reactive-dot/core/wallets.js";
+import { InjectedWalletProvider } from "@reactive-dot/core/wallets.js";
 import { chainSpec } from "polkadot-api/chains/polkadot";
 import { getSmProvider } from "polkadot-api/sm-provider";
 import { startFromWorker } from "polkadot-api/smoldot/from-worker";
@@ -91,7 +91,7 @@ export const config = defineConfig({
       provider: getSmProvider(smoldot.addChain({ chainSpec })),
     },
   },
-  wallets: [new InjectedWalletAggregator()],
+  wallets: [new InjectedWalletProvider()],
 });
 ```
 
@@ -106,7 +106,7 @@ export const config = defineConfig({
 import { dot } from "@polkadot-api/descriptors";
 import { getWsProvider } from "@polkadot-api/ws-provider/web";
 import { defineConfig } from "@reactive-dot/core";
-import { InjectedWalletAggregator } from "@reactive-dot/core/wallets.js";
+import { InjectedWalletProvider } from "@reactive-dot/core/wallets.js";
 
 export const config = defineConfig({
   chains: {
@@ -115,7 +115,7 @@ export const config = defineConfig({
       provider: getWsProvider("wss://polkadot-rpc.publicnode.com"),
     },
   },
-  wallets: [new InjectedWalletAggregator()],
+  wallets: [new InjectedWalletProvider()],
 });
 ```
 
