refactor(docs): install commands

--- a/apps/docs/docs/getting-started/connect-wallets.mdx
+++ b/apps/docs/docs/getting-started/connect-wallets.mdx
@@ -19,51 +19,15 @@ Additional dependencies are required if you use any of be bellow wallet type.
 
 ### [WalletConnect](https://walletconnect.com/)
 
-{/* prettier-ignore-start */}
-
-<Tabs>
-  <TabItem value="npm" label="npm" default>
-    ```sh
-    npm add @reactive-dot/wallet-walletconnect
-    ```
-  </TabItem>
-  <TabItem value="yarn" label="yarn">
-    ```sh
-    yarn add @reactive-dot/wallet-walletconnect
-    ```
-  </TabItem>
-    <TabItem value="pnpm" label="pnpm">
-    ```sh
-    pnpm add @reactive-dot/wallet-walletconnect
-    ```
-  </TabItem>
-</Tabs>
-
-{/* prettier-ignore-end */}
+```bash npm2yarn
+npm install @reactive-dot/wallet-walletconnect
+```
 
 ### [Ledger](https://www.ledger.com/)
 
-{/* prettier-ignore-start */}
-
-<Tabs>
-  <TabItem value="npm" label="npm" default>
-    ```sh
-    npm add @reactive-dot/wallet-ledger
-    ```
-  </TabItem>
-  <TabItem value="yarn" label="yarn">
-    ```sh
-    yarn add @reactive-dot/wallet-ledger
-    ```
-  </TabItem>
-    <TabItem value="pnpm" label="pnpm">
-    ```sh
-    pnpm add @reactive-dot/wallet-ledger
-    ```
-  </TabItem>
-</Tabs>
-
-{/* prettier-ignore-end */}
+```bash npm2yarn
+npm install @reactive-dot/wallet-ledger
+```
 
 ## Add wallets to the config
 
