--- a/apps/docs/docs/getting-started/setup.mdx
+++ b/apps/docs/docs/getting-started/setup.mdx
@@ -18,27 +18,9 @@ This walks you through the process of creating a simple ReactiveDOT application.
 
 First add ReactiveDOT, along with required packages as dependencies to your React project.
 
-{/* prettier-ignore-start */}
-
-<Tabs>
-  <TabItem value="npm" label="npm" default>
-    ```sh
-    npm add @reactive-dot/react polkadot-api
-    ```
-  </TabItem>
-  <TabItem value="yarn" label="yarn">
-    ```sh
-    yarn add @reactive-dot/react polkadot-api
-    ```
-  </TabItem>
-    <TabItem value="pnpm" label="pnpm">
-    ```sh
-    pnpm add @reactive-dot/react polkadot-api
-    ```
-  </TabItem>
-</Tabs>
-
-{/* prettier-ignore-end */}
+```bash npm2yarn
+npm install @reactive-dot/react polkadot-api
+```
 
 ## Download & sync metadata
 
